; ModuleID = '/home/carl/AnghaBench/oss-fuzz/projects/zlib/extr_example_dict_fuzzer.c_LLVMFuzzerTestOneInput.c'
source_filename = "/home/carl/AnghaBench/oss-fuzz/projects/zlib/extr_example_dict_fuzzer.c_LLVMFuzzerTestOneInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LLVMFuzzerTestOneInput.kMaxSize = internal global i64 102400, align 8
@data = common dso_local global i64* null, align 8
@dataLen = common dso_local global i64 0, align 8
@dictionaryLen = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LLVMFuzzerTestOneInput(i64* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  store i64* %0, i64** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 0, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = icmp ult i64 %8, 1
  br i1 %9, label %14, label %10

10:                                               ; preds = %2
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* @LLVMFuzzerTestOneInput.kMaxSize, align 8
  %13 = icmp ugt i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10, %2
  store i32 0, i32* %3, align 4
  br label %33

15:                                               ; preds = %10
  %16 = load i64*, i64** %4, align 8
  store i64* %16, i64** @data, align 8
  %17 = load i64, i64* %5, align 8
  store i64 %17, i64* @dataLen, align 8
  %18 = load i64*, i64** @data, align 8
  %19 = getelementptr inbounds i64, i64* %18, i64 0
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* @dictionaryLen, align 8
  %21 = load i64, i64* @dictionaryLen, align 8
  %22 = load i64, i64* @dataLen, align 8
  %23 = icmp ugt i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %15
  %25 = load i64, i64* @dataLen, align 8
  store i64 %25, i64* @dictionaryLen, align 8
  br label %26

26:                                               ; preds = %24, %15
  %27 = call i32 @test_dict_deflate(i64** %7, i64* %6)
  %28 = load i64*, i64** %7, align 8
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @test_dict_inflate(i64* %28, i64 %29)
  %31 = load i64*, i64** %7, align 8
  %32 = call i32 @free(i64* %31)
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %26, %14
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @test_dict_deflate(i64**, i64*) #1

declare dso_local i32 @test_dict_inflate(i64*, i64) #1

declare dso_local i32 @free(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
